--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using System.Security.Claims
+@using Infraero.Relprev.Infrastructure.Identity
+@using Infraero.Relprev.WebUi.Services
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+@model Infraero.Relprev.CrossCutting.Models.RelatoModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,7 +13,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Edit", "Relato", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "AtribuirRespRelato", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -28,50 +33,68 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input readonly type="text" name="email" class="form-control" value="02081984" maxlength="100" />
+                                <input readonly id="CodNumRelato" name="CodNumRelato" value=" @Model.Relato.NumRelato" class="form-control" />
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura <span class="required">*</span></label>
+                        <label class="col-lg-3 control-label text-sm-right pt-2">Unidade de Infraestrutura<span class="required">*</span></label>
+
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate" disabled="disabled">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
+                            <input readonly id="UnidadeInfraestrutura" name="UnidadeInfraestrutura" value=" @Model.Relato.UnidadeInfraestrutura.DscCodUnidadeDescricao" class="form-control" />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-lg-3 control-label text-lg-right pt-2">Data da ocorrência <span class="required">*</span></label>
+                        <label class="col-lg-3 control-label text-lg-right pt-2">Data da ocorrência</label>
                         <div class="col-lg-3">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input readonly id="date" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="eg.: Data da ocorrência de prevenção" class="form-control">
+                                <input readonly id="DtOcorrencia" name="DtOcorrencia"
+                                       data-plugin-masked-input data-input-mask="99/99/9999"
+                                       placeholder="eg.: Data da ocorrência de prevenção"
+                                       class="form-control"
+                                       value="@Model.Relato.DatOcorrencia">
                             </div>
                         </div>
 
-                        <label class="col-lg-2 control-label text-lg-right pt-2">Hora da Ocorrência <span class="required">*</span></label>
+                        <label class="col-lg-2 control-label text-lg-right pt-2">Hora da Ocorrência</label>
                         <div class="col-lg-3 pull-left">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input readonly type="text" data-plugin-timepicker class="form-control" data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência">
+                                <input readonly type="text"
+                                       id="HorOcorrencia" name="HorOcorrencia"
+                                       data-plugin-timepicker class="form-control"
+                                       data-plugin-options='{ "showMeridian": false }'
+                                       placeholder="eg.: Horário da ocorrência"
+                                       value="@Model.Relato.HorOcorrencia">
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local da Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" name="fullname" class="form-control" placeholder="eg.: Nome do Local da Ocorrência do relato  " required maxlength="200" />
+                            <textarea readonly type="text" rows="3"
+                                      name="DscLocalOcorrenciaRelator"
+                                      class="form-control"
+                                      placeholder="eg.: Nome do Local da Ocorrência do relato  "
+                                      required
+                                      maxlength="200">@Model.Relato.DscLocalOcorrenciaRelator</textarea>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da Ocorrência/Nova Descrição <span class="required">*</span></label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da ocorrência/Nova descrição <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea readonly type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição da nova ocorrência" required maxlength="200"></textarea>
+                            <textarea readonly
+                                      name="DscEnvolvidosOcorrencia"
+                                      type="text" rows="3"
+                                      class="form-control"
+                                      placeholder="eg.: Pessoas e / ou veículos envolvidos no relato"
+                                      required
+                                      maxlength="500">@Model.Relato.DscOcorrenciaRelator</textarea>
                         </div>
                     </div>
 
@@ -88,44 +111,74 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local da ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" name="fullname" class="form-control" placeholder="eg.: Descrição do local da ocorrência" required maxlength="200" />
+                            <input readonly id="DscLocal" name="DscLocal"
+                                   placeholder="eg.: Local da ocorrência"
+                                   class="form-control"
+                                   value="@Model.Relato.Local.DscLocal">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sub Local de ocorrência   <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" name="fullname" class="form-control" placeholder="eg.: Descrição da ocorrência" required maxlength="200" />
+                            <input readonly id="DscSubLocal" name="DscSubLocal"
+                                   placeholder="eg.: Sub Local da ocorrência"
+                                   class="form-control"
+                                   value="@Model.Relato.SubLocal.DscSubLocal">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" name="fullname" class="form-control" placeholder="eg.: Descrição do assunto" required maxlength="200" />
+                            <input readonly id="DsAssunto" name="DsAssunto"
+                                   placeholder="eg.: Assunto da ocorrência"
+                                   class="form-control"
+                                   value="@Model.Relato.Assunto.DscAssunto">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sub Assunto<span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" name="fullname" class="form-control" placeholder="eg.: Descrição do sub assunto" required maxlength="200" />
+                            <input readonly id="DsSubAssunto" name="DsSubAssunto"
+                                   placeholder="eg.: Sub Assunto da ocorrência"
+                                   class="form-control"
+                                   value="@Model.Relato.SubAssunto.DscSubAssunto">
                         </div>
                     </div>
                     <br />
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Empresa de atendimento<span class="required">*</span></label>
-                        <div class="col-lg-7">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
-                        </div>
+                        <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
+                                title="Por favor selecione uma empresa." required
+                                asp-for="CodEmpresa" asp-items="Model.ListEmpresa">
+                            <option value="">Selecionar Empresa</option>
+                        </select>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável técnico<span class="required">*</span></label>
                         <div class="col-lg-7">
-                            <select data-plugin-selectTwo class="form-control populate">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
+                            @{
+                                var userRole = ((ClaimsIdentity)User.Identity).FindFirst(ClaimTypes.Role).Value;
+
+                                var requirement = new UserInRoleRequirement(userRole);
+
+                            }
+                            @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
+                            {
+                                <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
+                                        title="Por favor selecione uma empresa." required multiple
+                                        asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
+                                    <option value="">Selecionar Responsável técnico</option>
+                                </select>
+                            }
+                            else
+                            {
+                                <select class="form-control populate select2" name="ddlResponsavelTecnico" id="ddlResponsavelTecnico"
+                                        title="Por favor selecione uma empresa." required
+                                        asp-for="CodResponsavel" asp-items="Model.ListResponsavel">
+                                    <option value="">Selecionar Responsável técnico</option>
+                                </select>
+                            }
+
                         </div>
                         <div class="col-lg-2">
                             <a href="#" id="custom-icon-success" class="btn  btn-primary pull-left mr-2">Adicionar &nbsp;&nbsp;<i class="fa fa-plus"></i></a>
@@ -134,7 +187,7 @@
                     <div class="form-group row">
                         <label class="col-sm-2 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
-                            <table class="table table-responsive-md table-striped mb-0">
+                            <table id="responsaveisDatatable" class="table table-responsive-md table-striped mb-0">
                                 <thead>
                                     <tr>
                                         <th>Empresa de atendimento</th>
@@ -146,20 +199,6 @@
                                     <tr>
                                         <td>BInnovatiom</td>
                                         <td>Uriel</td>
-                                        <td class="text-center">
-                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ntitsolutions</td>
-                                        <td>Miguel</td>
-                                        <td class="text-center">
-                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Amcom</td>
-                                        <td>Maria Flor</td>
                                         <td class="text-center">
                                             <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
                                         </td>
@@ -278,7 +317,7 @@ Theme Version: 	2.0.0
         });
 
 
-        $('#custom-icon-success').click(function() {
+        $('#custom-icon-success').click(function () {
             new PNotify({
                 title: 'Atribuir Responsável',
                 text: 'Empresa adicionada com sucesso.',
