--- a/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Cancel", "Relato", FormMethod.Post))
+        @using (@Html.BeginForm("Cancel", "Relato", FormMethod.Post,  new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -35,13 +35,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <input type="hidden" id="CodUnidadeInfraestrutura" name="CodUnidadeInfraestrutura" value="@Model.Relato.CodUnidadeInfraestrutura">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura <span class="required">*</span></label>
                         <div class="col-lg-9">
                             <input readonly id="DscUnidadeInfraestrutura" name="DscUnidadeInfraestrutura"
                                    placeholder="eg.: Unidade Infraestrutura"
                                    class="form-control"
-                                   value="@Model.NomUnidadeÌnfraestrutura">
+                                   value="@Model.Relato.UnidadeInfraestrutura.NomUnidadeÌnfraestrutura">
                         </div>
                     </div>
                     <div class="form-group row">
