--- a/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
@@ -144,7 +144,7 @@
                                       class="form-control"
                                       placeholder="eg.: Descrição do motivo "
                                       required
-                                      maxlength="500">
+                                      maxlength="500">@Model.Relato.
                             </textarea>
                         </div>
                     </div>
